backend/src/main/java/com/example/sap_shop/error/DiscountNotFoundException.java
package com.example.sap_shop.error;

public class DiscountNotFoundException extends Exception {
    public DiscountNotFoundException(String message) {
        super(message);
    }
}
